trunk/Archive2/9b/681d052d64a20f/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function 'int main()':
main.cpp:3:5: error: static assertion failed: ...
     static_assert(std::is_assignable<int*, std::nullptr_t>(), "...");
     ^
