trunk/Archive2/9b/681d052d64a20f/main.cpp
#include <type_traits>
int main() {
    static_assert(std::is_assignable<int*, std::nullptr_t>(), "...");
}